--- a/src/PlataformaEducacaoOnline.Alunos.Data/PlataformaEducacaoOnline.Alunos.Data.csproj
+++ b/src/PlataformaEducacaoOnline.Alunos.Data/PlataformaEducacaoOnline.Alunos.Data.csproj
@@ -6,4 +6,18 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PlataformaEducacaoOnline.Alunos.Domain\PlataformaEducacaoOnline.Alunos.Domain.csproj" />
+    <ProjectReference Include="..\PlataformaEducacaoOnline.Core\PlataformaEducacaoOnline.Core.csproj" />
+  </ItemGroup>
+
 </Project>
