--- a/src/PlataformaEducacaoOnline.Autenticacao/PlataformaEducacaoOnline.Autenticacao.csproj
+++ b/src/PlataformaEducacaoOnline.Autenticacao/PlataformaEducacaoOnline.Autenticacao.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.15" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.15" />
@@ -19,6 +20,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PlataformaEducacaoOnline.Core\PlataformaEducacaoOnline.Core.csproj" />
   </ItemGroup>
 
 </Project>
