--- a/src/PlataformaEducacaoOnline.API/PlataformaEducacaoOnline.API.csproj
+++ b/src/PlataformaEducacaoOnline.API/PlataformaEducacaoOnline.API.csproj
@@ -22,6 +22,8 @@
     <ProjectReference Include="..\PlataformaEducacaoOnline.Autenticacao\PlataformaEducacaoOnline.Autenticacao.csproj" />
     <ProjectReference Include="..\PlataformaEducacaoOnline.Conteudos.Application\PlataformaEducacaoOnline.Conteudos.Application.csproj" />
     <ProjectReference Include="..\PlataformaEducacaoOnline.Conteudos.Data\PlataformaEducacaoOnline.Conteudos.Data.csproj" />
+    <ProjectReference Include="..\PlataformaEducacaoOnline.Financeiro.AntiCorruption\PlataformaEducacaoOnline.Financeiro.AntiCorruption.csproj" />
+    <ProjectReference Include="..\PlataformaEducacaoOnline.Financeiro.Data\PlataformaEducacaoOnline.Financeiro.Data.csproj" />
   </ItemGroup>
 
 </Project>
